# awsrun

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  conventional.yml
docs/: acctload.html  argparse.html  cache.html  cli.html  cloudwatch.html  cmdmgr.html  config.html  index.html  plugmgr.html  runner.html  session.html  webfonts.css
docs/commands/: index.html
docs/commands/aws/: access_report.html  aws.html  cidr_overlap.html  console.html  dx_maint.html  dx_status.html  index.html  kubectl.html  last.html  list_hosted_zones.html  list_iam_policies.html  list_iam_roles.html  list_igws.html  list_lambdas.html  list_public_ips.html  list_vpc_attribute.html  list_vpcs.html
docs/commands/azure/: az.html  cidr_overlap.html  index.html  list_udrs.html  list_vnets.html
docs/plugins/: accts.html  index.html
docs/plugins/accts/: aws.html  azure.html  index.html
docs/plugins/creds/: aws.html  azure.html  index.html
docs/session/: aws.html  azure.html  index.html
src/awsrun/: __init__.py  acctload.py  argparse.py  cache.py  cli.py  cloudwatch.py  cmdmgr.py  config.py  plugmgr.py  runner.py  session.py
src/awsrun/commands/: __init__.py
src/awsrun/commands/aws/: __init__.py  access_report.py  aws.py  cidr_overlap.py  console.py  dx_maint.py  dx_status.py  kubectl.py  last.py  list_hosted_zones.py  list_iam_policies.py  list_iam_roles.py  list_igws.py  list_lambdas.py  list_public_ips.py  list_vpc_attribute.py  list_vpcs.py
src/awsrun/commands/azure/: __init__.py  az.py  cidr_overlap.py  list_udrs.py  list_vnets.py
src/awsrun/plugins/: __init__.py  accts.py
src/awsrun/plugins/accts/: __init__.py  aws.py  azure.py
src/awsrun/plugins/creds/: __init__.py  aws.py  azure.py
src/awsrun/session/: __init__.py  aws.py  azure.py
src/docs/: README.md  build.sh
src/docs/screencast/: build.sh  demo.cast
src/docs/templates/: config.mako  head.mako  html.mako
src/docs/webfonts/: webfonts.css
tests/: conftest.py
tests/integration/: __init__.py  test_acctload.py
tests/unit/: __init__.py  test_acctload.py  test_argparse.py  test_cache.py  test_config.py  test_runner.py
